--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-primary text-secondary min-h-screen flex-col;
+    @apply bg-primary-1 text-secondary-1 min-h-screen flex-col;
   }
 }
 
@@ -27,4 +27,18 @@
 /* Define the scrollbar handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #8e7c75; /* Darker gray color on hover */
+}
+
+@keyframes custom-blink {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+.animate-custom-blink {
+  animation: custom-blink 1s infinite;
 }
