--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,85 @@
   @apply text-red-500;
 }
 
+.loader {
+  width: 32px;
+  height: 32px;
+  border: 5px solid #facc15;
+  border-bottom-color: #a05943;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* .caret {
   transition: left 0.3s ease, top 0.3s ease;
 } */
+
+.progress-loader {
+  display: block;
+  position: relative;
+  height: 12px;
+  width: 300px;
+  border: 1px solid #e2e8f0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.progress-loader::after {
+  content: "";
+  width: 40%;
+  height: 100%;
+  background: #eab308;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: animloader 2s linear infinite;
+}
+
+@keyframes animloader {
+  0% {
+    left: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    left: 100%;
+    transform: translateX(0%);
+  }
+}
+
+.profile-loader {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  background-image: linear-gradient(#fee2e2 12px, transparent 0),
+    linear-gradient(#eab308 12px, transparent 0),
+    linear-gradient(#eab308 12px, transparent 0),
+    linear-gradient(#fee2e2 12px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 8px 8px;
+  background-position: left top, left bottom, right top, right bottom;
+  animation: Progilerotate 2s linear infinite;
+}
+@keyframes Progilerotate {
+  0% {
+    width: 20px;
+    height: 20px;
+    transform: rotate(0deg);
+  }
+
+  100% {
+    width: 20px;
+    height: 20px;
+    transform: rotate(360deg);
+  }
+}
